// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Random grids to render render 1`] = `
"+-------+---+---+---+
| 0   0 | 3 | 0 | 2 |
|   +---+---+---+---+
| 0 | 3 | 1   1 | 3 |
|   +---+---+---+---+
| 0 | 2 | 3 | 2   2 |
+---+---+---+-------+
| 1   1 | 2 | 3   3 |
|       +---+-------+
| 1   1 | 3 | 0   0 |
+-------+---+-------+

room 0 size=7 cells=0,1,3,5,10,23,24
room 1 size=6 cells=7,8,15,16,20,21
room 2 size=5 cells=4,11,13,14,17
room 3 size=7 cells=2,6,9,12,18,19,22"
`;

exports[`Random grids to render render 2`] = `
"+-------+---+---+---+
| [93m0[39m   [93m0[39m | [102m[30m3[39m[49m | [93m0[39m | [96m2[39m |
|   +---+---+---+---+
| [93m0[39m | [102m[30m3[39m[49m | [94m1[39m   [94m1[39m | [102m[30m3[39m[49m |
|   +---+---+---+---+
| [93m0[39m | [96m2[39m | [102m[30m3[39m[49m | [96m2[39m   [96m2[39m |
+---+---+---+-------+
| [94m1[39m   [94m1[39m | [96m2[39m | [102m[30m3[39m[49m   [102m[30m3[39m[49m |
|       +---+-------+
| [94m1[39m   [94m1[39m | [102m[30m3[39m[49m | [93m0[39m   [93m0[39m |
+-------+---+-------+

room 0 size=7 cells=0,1,3,5,10,23,24
room 1 size=6 cells=7,8,15,16,20,21
room 2 size=5 cells=4,11,13,14,17
room 3 size=7 cells=2,6,9,12,18,19,22"
`;

exports[`Random grids to render render 3`] = `
"+---+-----------+---+---+---+---+---+---+
| 3 | 2   2   2 | 1 | 2 | 1 | 3 | 0 | 1 |
|   |   +---+---+---+---+   |   +---+---+
| 3 | 2 | 1 | 0 | 2 | 0 | 1 | 3 | 1 | 0 |
+---+---+---+   +---+---+---+---+---+---+
| 0   0   0   0 | 1 | 3 | 0 | 1 | 0 | 2 |
|   +---+-------+---+   +---+   +---+---+
| 0 | 1 | 2   2   2 | 3   3 | 1 | 2 | 1 |
+---+   +-------+   |   +---+---+---+---+
| 2 | 1 | 3   3 | 2 | 3 | 2 | 3   3 | 0 |
+---+---+-------+---+---+---+-------+---+

room 0 size=12 cells=8,13,15,19,20,21,22,23,26,28,30,49
room 1 size=12 cells=4,6,9,12,16,18,24,27,31,37,39,41
room 2 size=14 cells=1,2,3,5,11,14,29,32,33,34,38,40,44,46
room 3 size=12 cells=0,7,10,17,25,35,36,42,43,45,47,48"
`;

exports[`Random grids to render render 4`] = `
"+---+-----------+---+---+---+---+---+---+
| [93m3[39m | [105m[30m2[39m[49m   [105m[30m2[39m[49m   [105m[30m2[39m[49m | [45m[30m1[39m[49m | [105m[30m2[39m[49m | [45m[30m1[39m[49m | [93m3[39m | [33m0[39m | [45m[30m1[39m[49m |
|   |   +---+---+---+---+   |   +---+---+
| [93m3[39m | [105m[30m2[39m[49m | [45m[30m1[39m[49m | [33m0[39m | [105m[30m2[39m[49m | [33m0[39m | [45m[30m1[39m[49m | [93m3[39m | [45m[30m1[39m[49m | [33m0[39m |
+---+---+---+   +---+---+---+---+---+---+
| [33m0[39m   [33m0[39m   [33m0[39m   [33m0[39m | [45m[30m1[39m[49m | [93m3[39m | [33m0[39m | [45m[30m1[39m[49m | [33m0[39m | [105m[30m2[39m[49m |
|   +---+-------+---+   +---+   +---+---+
| [33m0[39m | [45m[30m1[39m[49m | [105m[30m2[39m[49m   [105m[30m2[39m[49m   [105m[30m2[39m[49m | [93m3[39m   [93m3[39m | [45m[30m1[39m[49m | [105m[30m2[39m[49m | [45m[30m1[39m[49m |
+---+   +-------+   |   +---+---+---+---+
| [105m[30m2[39m[49m | [45m[30m1[39m[49m | [93m3[39m   [93m3[39m | [105m[30m2[39m[49m | [93m3[39m | [105m[30m2[39m[49m | [93m3[39m   [93m3[39m | [33m0[39m |
+---+---+-------+---+---+---+-------+---+

room 0 size=12 cells=8,13,15,19,20,21,22,23,26,28,30,49
room 1 size=12 cells=4,6,9,12,16,18,24,27,31,37,39,41
room 2 size=14 cells=1,2,3,5,11,14,29,32,33,34,38,40,44,46
room 3 size=12 cells=0,7,10,17,25,35,36,42,43,45,47,48"
`;

exports[`Random grids to render render 5`] = `
"+---+---+-------+---+
| 3 | 0 | 1   1 | 2 |
|   +---+---+---+---+
| 3 | 2 | 3 | 2 | 0 |
+---+---+---+---+---+
| 0 | 3 | 0 | 3 | 1 |
|   +---+   |   +---+
| 0 | 1 | 0 | 3 | 2 |
|   +---+---+---+   |
| 0   0 | 2 | 1 | 2 |
|   +---+   |   +---+
| 0 | 3 | 2 | 1 | 3 |
+---+   +---+---+---+
| 3   3   3   3 | 2 |
+-------+   +---+---+
| 2   2 | 3 | 2 | 0 |
+---+---+---+   +---+
| 0 | 1   1 | 2   2 |
+---+   +---+---+---+
| 1   1 | 2 | 1 | 3 |
+-------+---+---+---+

room 0 size=11 cells=1,9,10,12,15,17,20,21,25,39,40
room 1 size=11 cells=2,3,14,16,23,28,41,42,45,46,48
room 2 size=14 cells=4,6,8,19,22,24,27,34,35,36,38,43,44,47
room 3 size=14 cells=0,5,7,11,13,18,26,29,30,31,32,33,37,49"
`;

exports[`Random grids to render render 6`] = `
"+---+---+-------+---+
| [41m[30m3[39m[49m | [103m[30m0[39m[49m | [34m1[39m   [34m1[39m | [42m[30m2[39m[49m |
|   +---+---+---+---+
| [41m[30m3[39m[49m | [42m[30m2[39m[49m | [41m[30m3[39m[49m | [42m[30m2[39m[49m | [103m[30m0[39m[49m |
+---+---+---+---+---+
| [103m[30m0[39m[49m | [41m[30m3[39m[49m | [103m[30m0[39m[49m | [41m[30m3[39m[49m | [34m1[39m |
|   +---+   |   +---+
| [103m[30m0[39m[49m | [34m1[39m | [103m[30m0[39m[49m | [41m[30m3[39m[49m | [42m[30m2[39m[49m |
|   +---+---+---+   |
| [103m[30m0[39m[49m   [103m[30m0[39m[49m | [42m[30m2[39m[49m | [34m1[39m | [42m[30m2[39m[49m |
|   +---+   |   +---+
| [103m[30m0[39m[49m | [41m[30m3[39m[49m | [42m[30m2[39m[49m | [34m1[39m | [41m[30m3[39m[49m |
+---+   +---+---+---+
| [41m[30m3[39m[49m   [41m[30m3[39m[49m   [41m[30m3[39m[49m   [41m[30m3[39m[49m | [42m[30m2[39m[49m |
+-------+   +---+---+
| [42m[30m2[39m[49m   [42m[30m2[39m[49m | [41m[30m3[39m[49m | [42m[30m2[39m[49m | [103m[30m0[39m[49m |
+---+---+---+   +---+
| [103m[30m0[39m[49m | [34m1[39m   [34m1[39m | [42m[30m2[39m[49m   [42m[30m2[39m[49m |
+---+   +---+---+---+
| [34m1[39m   [34m1[39m | [42m[30m2[39m[49m | [34m1[39m | [41m[30m3[39m[49m |
+-------+---+---+---+

room 0 size=11 cells=1,9,10,12,15,17,20,21,25,39,40
room 1 size=11 cells=2,3,14,16,23,28,41,42,45,46,48
room 2 size=14 cells=4,6,8,19,22,24,27,34,35,36,38,43,44,47
room 3 size=14 cells=0,5,7,11,13,18,26,29,30,31,32,33,37,49"
`;

exports[`Random grids to render render 7`] = `
"+---+---+---+---+-------+---+-------+---+
| 3 | 0 | 3 | 2 | 0   0 | 3 | 2   2 | 3 |
+---+---+---+   |   +---+---+-------+---+
| 1 | 3 | 2   2 | 0 | 3 | 0   0   0   0 |
+---+---+   +---+---+---+---+---+-------+
| 2 | 0 | 2 | 0 | 1 | 0 | 1 | 3 | 1   1 |
+---+   +---+   +---+   +---+---+   +---+
| 1 | 0 | 1 | 0 | 2 | 0   0   0 | 1 | 3 |
+---+---+   +---+   |   +---+---+---+   |
| 0 | 1   1 | 3 | 2 | 0 | 1 | 2 | 3   3 |
+---+-------+---+   +---+   +---+---+   |
| 2   2   2 | 1 | 2 | 3 | 1   1 | 2 | 3 |
+-------+---+---+---+   |   +---+---+   |
| 0   0 | 1 | 0 | 1 | 3 | 1 | 2 | 3   3 |
+---+---+   +---+---+   +---+   |   +---+
| 1 | 3 | 1 | 3 | 2 | 3 | 2   2 | 3 | 1 |
|   +---+---+---+---+---+-------+---+---+
| 1 | 2   2 | 1   1 | 2 | 3   3 | 1 | 0 |
+---+---+   +---+---+---+   +---+---+---+
| 3 | 1 | 2 | 3 | 0   0 | 3 | 2 | 0 | 2 |
+---+---+---+---+-------+---+---+---+---+

room 0 size=25 cells=1,4,5,14,16,17,18,19,21,23,25,31,33,35,36,37,40,45,60,61,63,89,94,95,98
room 1 size=25 cells=10,24,26,28,29,30,32,38,41,42,46,53,56,57,62,64,66,70,72,79,80,83,84,88,91
room 2 size=25 cells=3,7,8,12,13,20,22,34,44,47,50,51,52,54,58,67,74,76,77,81,82,85,92,97,99
room 3 size=25 cells=0,2,6,9,11,15,27,39,43,48,49,55,59,65,68,69,71,73,75,78,86,87,90,93,96"
`;

exports[`Random grids to render render 8`] = `
"+---+---+---+---+-------+---+-------+---+
| [35m3[39m | [92m0[39m | [35m3[39m | [45m[30m2[39m[49m | [92m0[39m   [92m0[39m | [35m3[39m | [45m[30m2[39m[49m   [45m[30m2[39m[49m | [35m3[39m |
+---+---+---+   |   +---+---+-------+---+
| [43m[30m1[39m[49m | [35m3[39m | [45m[30m2[39m[49m   [45m[30m2[39m[49m | [92m0[39m | [35m3[39m | [92m0[39m   [92m0[39m   [92m0[39m   [92m0[39m |
+---+---+   +---+---+---+---+---+-------+
| [45m[30m2[39m[49m | [92m0[39m | [45m[30m2[39m[49m | [92m0[39m | [43m[30m1[39m[49m | [92m0[39m | [43m[30m1[39m[49m | [35m3[39m | [43m[30m1[39m[49m   [43m[30m1[39m[49m |
+---+   +---+   +---+   +---+---+   +---+
| [43m[30m1[39m[49m | [92m0[39m | [43m[30m1[39m[49m | [92m0[39m | [45m[30m2[39m[49m | [92m0[39m   [92m0[39m   [92m0[39m | [43m[30m1[39m[49m | [35m3[39m |
+---+---+   +---+   |   +---+---+---+   |
| [92m0[39m | [43m[30m1[39m[49m   [43m[30m1[39m[49m | [35m3[39m | [45m[30m2[39m[49m | [92m0[39m | [43m[30m1[39m[49m | [45m[30m2[39m[49m | [35m3[39m   [35m3[39m |
+---+-------+---+   +---+   +---+---+   |
| [45m[30m2[39m[49m   [45m[30m2[39m[49m   [45m[30m2[39m[49m | [43m[30m1[39m[49m | [45m[30m2[39m[49m | [35m3[39m | [43m[30m1[39m[49m   [43m[30m1[39m[49m | [45m[30m2[39m[49m | [35m3[39m |
+-------+---+---+---+   |   +---+---+   |
| [92m0[39m   [92m0[39m | [43m[30m1[39m[49m | [92m0[39m | [43m[30m1[39m[49m | [35m3[39m | [43m[30m1[39m[49m | [45m[30m2[39m[49m | [35m3[39m   [35m3[39m |
+---+---+   +---+---+   +---+   |   +---+
| [43m[30m1[39m[49m | [35m3[39m | [43m[30m1[39m[49m | [35m3[39m | [45m[30m2[39m[49m | [35m3[39m | [45m[30m2[39m[49m   [45m[30m2[39m[49m | [35m3[39m | [43m[30m1[39m[49m |
|   +---+---+---+---+---+-------+---+---+
| [43m[30m1[39m[49m | [45m[30m2[39m[49m   [45m[30m2[39m[49m | [43m[30m1[39m[49m   [43m[30m1[39m[49m | [45m[30m2[39m[49m | [35m3[39m   [35m3[39m | [43m[30m1[39m[49m | [92m0[39m |
+---+---+   +---+---+---+   +---+---+---+
| [35m3[39m | [43m[30m1[39m[49m | [45m[30m2[39m[49m | [35m3[39m | [92m0[39m   [92m0[39m | [35m3[39m | [45m[30m2[39m[49m | [92m0[39m | [45m[30m2[39m[49m |
+---+---+---+---+-------+---+---+---+---+

room 0 size=25 cells=1,4,5,14,16,17,18,19,21,23,25,31,33,35,36,37,40,45,60,61,63,89,94,95,98
room 1 size=25 cells=10,24,26,28,29,30,32,38,41,42,46,53,56,57,62,64,66,70,72,79,80,83,84,88,91
room 2 size=25 cells=3,7,8,12,13,20,22,34,44,47,50,51,52,54,58,67,74,76,77,81,82,85,92,97,99
room 3 size=25 cells=0,2,6,9,11,15,27,39,43,48,49,55,59,65,68,69,71,73,75,78,86,87,90,93,96"
`;

exports[`Random grids to render render 9`] = `
"+----+----+----+----+----+
| 15 |  8 | 13 | 15 |  1 |
|    +----+----+----+----+
| 15 | 14 | 15 |  5 | 13 |
+----+----+----+----+----+
|  2 |  5 | 11 |  0 |  1 |
+----+----+----+----+----+
|  4 | 14 |  9 | 13 |  0 |
|    +----+----+----+----+
|  4 | 13 | 11 |  2 |  9 |
+----+----+----+----+----+

room 0 size=2 cells=13,19
room 1 size=2 cells=4,14
room 2 size=2 cells=10,23
room 4 size=2 cells=15,20
room 5 size=2 cells=8,11
room 8 size=1 cells=1
room 9 size=2 cells=17,24
room 11 size=2 cells=12,22
room 13 size=4 cells=2,9,18,21
room 14 size=2 cells=6,16
room 15 size=4 cells=0,3,5,7"
`;

exports[`Random grids to render render 10`] = `
"+----+----+----+----+----+
| [32m15[39m |  [104m[30m8[39m[49m | [102m[30m13[39m[49m | [32m15[39m |  [31m1[39m |
|    +----+----+----+----+
| [32m15[39m | [95m14[39m | [32m15[39m |  [33m5[39m | [102m[30m13[39m[49m |
+----+----+----+----+----+
|  [45m[30m2[39m[49m |  [33m5[39m | [96m11[39m |  [41m[30m0[39m[49m |  [31m1[39m |
+----+----+----+----+----+
|  [35m4[39m | [95m14[39m |  [46m[30m9[39m[49m | [102m[30m13[39m[49m |  [41m[30m0[39m[49m |
|    +----+----+----+----+
|  [35m4[39m | [102m[30m13[39m[49m | [96m11[39m |  [45m[30m2[39m[49m |  [46m[30m9[39m[49m |
+----+----+----+----+----+

room 0 size=2 cells=13,19
room 1 size=2 cells=4,14
room 2 size=2 cells=10,23
room 4 size=2 cells=15,20
room 5 size=2 cells=8,11
room 8 size=1 cells=1
room 9 size=2 cells=17,24
room 11 size=2 cells=12,22
room 13 size=4 cells=2,9,18,21
room 14 size=2 cells=6,16
room 15 size=4 cells=0,3,5,7"
`;

exports[`Random grids to render render 11`] = `
"+----+---+----+---+----+----+----+----+----+----+
|  3 | 9 | 11 | 1 |  6 |  8 | 15 |  6 |  2 |  4 |
+----+---+----+---+----+----+----+----+----+----+
| 10 | 7 | 13 | 4 | 11 | 15 |  8 |  1 | 14 |  9 |
+----+   +----+---+----+----+----+----+    +----+
|  9 | 7 | 12 | 3 | 10 |  5 | 13 | 14   14 |  3 |
+----+---+----+---+----+----+----+----+----+----+
| 10 | 6 |  0 | 1 |  4 | 12 |  0 |  9 | 13 |  2 |
+----+---+----+---+----+----+----+----+----+----+
|  3   3 | 14 | 3 |  7 |  3 | 11 |  5 |  7 | 11 |
+--------+----+---+----+----+----+----+----+----+

room 0 size=2 cells=32,36
room 1 size=3 cells=3,17,33
room 2 size=2 cells=8,39
room 3 size=7 cells=0,23,29,40,41,43,45
room 4 size=3 cells=9,13,34
room 5 size=2 cells=25,47
room 6 size=3 cells=4,7,31
room 7 size=4 cells=11,21,44,48
room 8 size=2 cells=5,16
room 9 size=4 cells=1,19,20,37
room 10 size=3 cells=10,24,30
room 11 size=4 cells=2,14,46,49
room 12 size=2 cells=22,35
room 13 size=3 cells=12,26,38
room 14 size=4 cells=18,27,28,42
room 15 size=2 cells=6,15"
`;

exports[`Random grids to render render 12`] = `
"+----+---+----+---+----+----+----+----+----+----+
|  [35m3[39m | [102m[30m9[39m[49m | [34m11[39m | [41m[30m1[39m[49m |  [95m6[39m |  [44m[30m8[39m[49m | [94m15[39m |  [95m6[39m |  [106m[30m2[39m[49m |  [33m4[39m |
+----+---+----+---+----+----+----+----+----+----+
| [96m10[39m | [46m[30m7[39m[49m | [93m13[39m | [33m4[39m | [34m11[39m | [94m15[39m |  [44m[30m8[39m[49m |  [41m[30m1[39m[49m | [103m[30m14[39m[49m |  [102m[30m9[39m[49m |
+----+   +----+---+----+----+----+----+    +----+
|  [102m[30m9[39m[49m | [46m[30m7[39m[49m | [104m[30m12[39m[49m | [35m3[39m | [96m10[39m |  [45m[30m5[39m[49m | [93m13[39m | [103m[30m14[39m[49m   [103m[30m14[39m[49m |  [35m3[39m |
+----+---+----+---+----+----+----+----+----+----+
| [96m10[39m | [95m6[39m |  [42m[30m0[39m[49m | [41m[30m1[39m[49m |  [33m4[39m | [104m[30m12[39m[49m |  [42m[30m0[39m[49m |  [102m[30m9[39m[49m | [93m13[39m |  [106m[30m2[39m[49m |
+----+---+----+---+----+----+----+----+----+----+
|  [35m3[39m   [35m3[39m | [103m[30m14[39m[49m | [35m3[39m |  [46m[30m7[39m[49m |  [35m3[39m | [34m11[39m |  [45m[30m5[39m[49m |  [46m[30m7[39m[49m | [34m11[39m |
+--------+----+---+----+----+----+----+----+----+

room 0 size=2 cells=32,36
room 1 size=3 cells=3,17,33
room 2 size=2 cells=8,39
room 3 size=7 cells=0,23,29,40,41,43,45
room 4 size=3 cells=9,13,34
room 5 size=2 cells=25,47
room 6 size=3 cells=4,7,31
room 7 size=4 cells=11,21,44,48
room 8 size=2 cells=5,16
room 9 size=4 cells=1,19,20,37
room 10 size=3 cells=10,24,30
room 11 size=4 cells=2,14,46,49
room 12 size=2 cells=22,35
room 13 size=3 cells=12,26,38
room 14 size=4 cells=18,27,28,42
room 15 size=2 cells=6,15"
`;

exports[`Random grids to render render 13`] = `
"+----+---------+----+----+
|  9 |  1    1 | 13 |  4 |
+----+----+----+----+    |
| 11 |  5 |  6 | 10 |  4 |
+----+----+    +----+----+
| 15 |  9 |  6 | 15 |  1 |
+----+----+----+----+----+
|  4 | 12 |  7 |  6 | 11 |
+----+----+----+----+----+
|  2 | 10 |  9 |  8 |  0 |
+----+----+----+----+----+
| 12 |  3    3 |  4 | 14 |
+----+----+----+----+----+
| 15 |  0 |  7 | 14 |  8 |
+----+----+----+----+----+
|  8 |  7 | 12 |  7 |  5 |
+----+----+----+----+----+
|  3 |  2 | 13 |  9 |  0 |
+----+----+----+----+----+
|  6 |  1 | 11 |  5    5 |
+----+----+----+---------+

room 0 size=3 cells=24,31,44
room 1 size=4 cells=1,2,14,46
room 2 size=2 cells=20,41
room 3 size=3 cells=26,27,40
room 4 size=4 cells=4,9,15,28
room 5 size=4 cells=6,39,48,49
room 6 size=4 cells=7,12,18,45
room 7 size=4 cells=17,32,36,38
room 8 size=3 cells=23,34,35
room 9 size=4 cells=0,11,22,43
room 10 size=2 cells=8,21
room 11 size=3 cells=5,19,47
room 12 size=3 cells=16,25,37
room 13 size=2 cells=3,42
room 14 size=2 cells=29,33
room 15 size=3 cells=10,13,30"
`;

exports[`Random grids to render render 14`] = `
"+----+---------+----+----+
|  [46m[30m9[39m[49m |  [45m[30m1[39m[49m    [45m[30m1[39m[49m | [106m[30m13[39m[49m |  [103m[30m4[39m[49m |
+----+----+----+----+    |
| [102m[30m11[39m[49m |  [42m[30m5[39m[49m |  [41m[30m6[39m[49m | [93m10[39m |  [103m[30m4[39m[49m |
+----+----+    +----+----+
| [94m15[39m |  [46m[30m9[39m[49m |  [41m[30m6[39m[49m | [94m15[39m |  [45m[30m1[39m[49m |
+----+----+----+----+----+
|  [103m[30m4[39m[49m | [91m12[39m |  [105m[30m7[39m[49m |  [41m[30m6[39m[49m | [102m[30m11[39m[49m |
+----+----+----+----+----+
|  [92m2[39m | [93m10[39m |  [46m[30m9[39m[49m |  [96m8[39m |  [31m0[39m |
+----+----+----+----+----+
| [91m12[39m |  [95m3[39m    [95m3[39m |  [103m[30m4[39m[49m | [32m14[39m |
+----+----+----+----+----+
| [94m15[39m |  [31m0[39m |  [105m[30m7[39m[49m | [32m14[39m |  [96m8[39m |
+----+----+----+----+----+
|  [96m8[39m |  [105m[30m7[39m[49m | [91m12[39m |  [105m[30m7[39m[49m |  [42m[30m5[39m[49m |
+----+----+----+----+----+
|  [95m3[39m |  [92m2[39m | [106m[30m13[39m[49m |  [46m[30m9[39m[49m |  [31m0[39m |
+----+----+----+----+----+
|  [41m[30m6[39m[49m |  [45m[30m1[39m[49m | [102m[30m11[39m[49m |  [42m[30m5[39m[49m    [42m[30m5[39m[49m |
+----+----+----+---------+

room 0 size=3 cells=24,31,44
room 1 size=4 cells=1,2,14,46
room 2 size=2 cells=20,41
room 3 size=3 cells=26,27,40
room 4 size=4 cells=4,9,15,28
room 5 size=4 cells=6,39,48,49
room 6 size=4 cells=7,12,18,45
room 7 size=4 cells=17,32,36,38
room 8 size=3 cells=23,34,35
room 9 size=4 cells=0,11,22,43
room 10 size=2 cells=8,21
room 11 size=3 cells=5,19,47
room 12 size=3 cells=16,25,37
room 13 size=2 cells=3,42
room 14 size=2 cells=29,33
room 15 size=3 cells=10,13,30"
`;

exports[`Random grids to render render 15`] = `
"+----+----+----+----+----+----+----+----+----+----+
| 10 |  5 |  4 | 14 |  3 |  7 |  4 |  9 |  2 |  4 |
|    +----+----+----+----+----+----+----+----+----+
| 10 | 12 |  7 |  4 | 10 |  4 |  6 | 11 | 15 |  0 |
+----+----+----+----+----+----+----+----+----+    |
|  4 |  5 |  6 | 12 |  0 |  9 | 13 |  6 |  8 |  0 |
+----+----+----+----+----+----+----+----+----+----+
| 11 | 15 |  4 |  2 |  1 |  0 |  8    8 | 11 |  9 |
+----+----+----+----+----+----+----+----+----+----+
| 14 |  4 |  1 |  0 |  6 | 11 |  6 | 15 |  3 |  8 |
+----+----+----+----+----+----+----+----+----+    |
|  6 | 13 |  9 |  1 | 14 |  7 | 15 | 10 | 14 |  8 |
+----+----+----+----+----+----+----+----+----+----+
| 13 | 11   11 | 15 |  9 |  5 | 11 | 12 |  3 | 14 |
+----+----+----+----+----+----+----+----+----+----+
|  5 | 13 | 12 |  2 | 13 |  7 |  5 |  4 | 10 |  1 |
+----+----+    |    +----+----+----+----+----+----+
|  3 |  7 | 12 |  2 |  8 | 14 | 10 | 13 |  7 |  5 |
+----+----+----+    +----+    +----+----+----+    |
|  0 |  1 |  3 |  2 | 12 | 14 | 15 | 10 |  2 |  5 |
+----+----+----+----+----+----+----+----+----+----+

room 0 size=6 cells=19,24,29,35,43,90
room 1 size=5 cells=34,42,53,79,91
room 2 size=6 cells=8,33,73,83,93,98
room 3 size=5 cells=4,48,68,80,92
room 4 size=9 cells=2,6,9,13,15,20,32,41,77
room 5 size=7 cells=1,21,65,70,76,89,99
room 6 size=6 cells=16,22,27,44,46,50
room 7 size=6 cells=5,12,55,75,81,88
room 8 size=6 cells=28,36,37,49,59,84
room 9 size=5 cells=7,25,39,52,64
room 10 size=7 cells=0,10,14,57,78,86,97
room 11 size=7 cells=17,30,38,45,61,62,66
room 12 size=6 cells=11,23,67,72,82,94
room 13 size=6 cells=26,51,60,71,74,87
room 14 size=7 cells=3,40,54,58,69,85,95
room 15 size=6 cells=18,31,47,56,63,96"
`;

exports[`Random grids to render render 16`] = `
"+----+----+----+----+----+----+----+----+----+----+
| [95m10[39m |  [91m5[39m |  [105m[30m4[39m[49m | [33m14[39m |  [101m[30m3[39m[49m |  [44m[30m7[39m[49m |  [105m[30m4[39m[49m |  [36m9[39m |  [35m2[39m |  [105m[30m4[39m[49m |
|    +----+----+----+----+----+----+----+----+----+
| [95m10[39m | [106m[30m12[39m[49m |  [44m[30m7[39m[49m |  [105m[30m4[39m[49m | [95m10[39m |  [105m[30m4[39m[49m |  [46m[30m6[39m[49m | [102m[30m11[39m[49m | [34m15[39m |  [93m0[39m |
+----+----+----+----+----+----+----+----+----+    |
|  [105m[30m4[39m[49m |  [91m5[39m |  [46m[30m6[39m[49m | [106m[30m12[39m[49m |  [93m0[39m |  [36m9[39m | [92m13[39m |  [46m[30m6[39m[49m |  [45m[30m8[39m[49m |  [93m0[39m |
+----+----+----+----+----+----+----+----+----+----+
| [102m[30m11[39m[49m | [34m15[39m |  [105m[30m4[39m[49m |  [35m2[39m |  [31m1[39m |  [93m0[39m |  [45m[30m8[39m[49m    [45m[30m8[39m[49m | [102m[30m11[39m[49m |  [36m9[39m |
+----+----+----+----+----+----+----+----+----+----+
| [33m14[39m |  [105m[30m4[39m[49m |  [31m1[39m |  [93m0[39m |  [46m[30m6[39m[49m | [102m[30m11[39m[49m |  [46m[30m6[39m[49m | [34m15[39m |  [101m[30m3[39m[49m |  [45m[30m8[39m[49m |
+----+----+----+----+----+----+----+----+----+    |
|  [46m[30m6[39m[49m | [92m13[39m |  [36m9[39m |  [31m1[39m | [33m14[39m |  [44m[30m7[39m[49m | [34m15[39m | [95m10[39m | [33m14[39m |  [45m[30m8[39m[49m |
+----+----+----+----+----+----+----+----+----+----+
| [92m13[39m | [102m[30m11[39m[49m   [102m[30m11[39m[49m | [34m15[39m |  [36m9[39m |  [91m5[39m | [102m[30m11[39m[49m | [106m[30m12[39m[49m |  [101m[30m3[39m[49m | [33m14[39m |
+----+----+----+----+----+----+----+----+----+----+
|  [91m5[39m | [92m13[39m | [106m[30m12[39m[49m |  [35m2[39m | [92m13[39m |  [44m[30m7[39m[49m |  [91m5[39m |  [105m[30m4[39m[49m | [95m10[39m |  [31m1[39m |
+----+----+    |    +----+----+----+----+----+----+
|  [101m[30m3[39m[49m |  [44m[30m7[39m[49m | [106m[30m12[39m[49m |  [35m2[39m |  [45m[30m8[39m[49m | [33m14[39m | [95m10[39m | [92m13[39m |  [44m[30m7[39m[49m |  [91m5[39m |
+----+----+----+    +----+    +----+----+----+    |
|  [93m0[39m |  [31m1[39m |  [101m[30m3[39m[49m |  [35m2[39m | [106m[30m12[39m[49m | [33m14[39m | [34m15[39m | [95m10[39m |  [35m2[39m |  [91m5[39m |
+----+----+----+----+----+----+----+----+----+----+

room 0 size=6 cells=19,24,29,35,43,90
room 1 size=5 cells=34,42,53,79,91
room 2 size=6 cells=8,33,73,83,93,98
room 3 size=5 cells=4,48,68,80,92
room 4 size=9 cells=2,6,9,13,15,20,32,41,77
room 5 size=7 cells=1,21,65,70,76,89,99
room 6 size=6 cells=16,22,27,44,46,50
room 7 size=6 cells=5,12,55,75,81,88
room 8 size=6 cells=28,36,37,49,59,84
room 9 size=5 cells=7,25,39,52,64
room 10 size=7 cells=0,10,14,57,78,86,97
room 11 size=7 cells=17,30,38,45,61,62,66
room 12 size=6 cells=11,23,67,72,82,94
room 13 size=6 cells=26,51,60,71,74,87
room 14 size=7 cells=3,40,54,58,69,85,95
room 15 size=6 cells=18,31,47,56,63,96"
`;
